# kb-cc-dashboard

./: CLAUDE.md  Cargo.toml  README.md
scripts/: agent-scenarios.md  triage-issues.sh  user-test.sh
src/: app.rs  config.rs  config_parser.rs  event.rs  lib.rs  listener.rs  main.rs  session.rs  session_watcher.rs  test_helpers.rs  ui.rs
src/tabs/: config.rs  events.rs  helpers.rs  mod.rs  sessions.rs
tests/: snapshot_dump.rs  snapshots.rs
